--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,5 +5,7 @@
   "unauthorized": "Unauthorized",
   "incorrectPin": "Incorrect pin",
   "favorites": "Favorites",
-  "add": "Add"
+  "add": "Add",
+  "g": "g",
+  "order": "Order"
 }
