--- a/lib/l10n/intl_hy.arb
+++ b/lib/l10n/intl_hy.arb
@@ -3,5 +3,9 @@
   "retry": "Փորձել կրկին",
   "checkInternet": "Ստուգեք ինտերնետի առկայությունը և փորձեկ կրկին",
   "unauthorized": "Մուտք գործեք",
-  "incorrectPin": "Մուտքագրված կոդը սխալ է"
+  "incorrectPin": "Մուտքագրված կոդը սխալ է",
+  "favorites": "Ընտրյալներ",
+  "add": "Ավելացնել",
+  "g": "գ",
+  "order": "Պատվիրել"
 }
