--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,5 +7,11 @@
   "favorites": "Favorites",
   "add": "Add",
   "g": "g",
-  "order": "Order"
+  "order": "Order",
+  "next": "Next",
+  "cash": "Cash",
+  "card": "Card",
+  "idram": "Idram",
+  "selectPaymentType": "Select payment type",
+  "additionalInfo": "Additional information"
 }
