--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,5 +15,6 @@
   "selectPaymentType": "Select payment type",
   "additionalInfo": "Additional information",
   "yourBasketEmpty": "Your basket empty",
-  "selectPaymentMethod": "Please, select method of payment"
+  "selectPaymentMethod": "Please, select method of payment",
+  "close": "Close"
 }
