--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,5 +16,9 @@
   "additionalInfo": "Additional information",
   "yourBasketEmpty": "Your basket empty",
   "selectPaymentMethod": "Please, select method of payment",
-  "close": "Close"
+  "close": "Close",
+  "yes": "Yes",
+  "no": "No",
+  "cancel": "Cancel",
+  "clearBasket": "Clear basket?"
 }
