--- a/lib/l10n/intl_hy.arb
+++ b/lib/l10n/intl_hy.arb
@@ -34,5 +34,6 @@
   "deliveryFee": "Առաքում",
   "goToPayment": "Անցնել վճարմանը",
   "searchResult": "Փնտրելու արձյունքները",
-  "goto": "Անցնել"
+  "goto": "Անցնել",
+  "noPermissionForThisAction": "Հնարավոր չէ կատարել ձեր հրահանգը"
 }
