--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -34,5 +34,6 @@
   "deliveryFee": "Доставка",
   "goToPayment": "Перейти к оплате",
   "searchResult": "Результаты поиска",
-  "goto": "Перейти"
+  "goto": "Перейти",
+  "noPermissionForThisAction": "Невозможно выполнить команду"
 }
