--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -36,5 +36,10 @@
   "searchResult": "Search result",
   "goto": "Go to",
   "noPermissionForThisAction": "No permission for this action",
-  "atLeastOneOptionMustSelected": "At least one option must be selected."
+  "atLeastOneOptionMustSelected": "At least one option must be selected.",
+  "accessDenied": "Access denied",
+  "searchAddress": "Search address",
+  "cannotGetAddress": "Cannot get address",
+  "missingAddress": "Missing address",
+  "pleaseSetAddress": "Please, set address"
 }
